Fixed shortcut text wrapping on small vw

--- a/timeweb/timewebapp/static/css/index.css
+++ b/timeweb/timewebapp/static/css/index.css
@@ -211,6 +211,7 @@ a[href="settings"] {
     cursor: pointer;
 }
 .shortcut-text {
+    white-space: nowrap;
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
